Fix the issue when displaying chart and text wrap in mat header

--- a/src/app/components/report/reporting-table/reporting-table.component.scss
+++ b/src/app/components/report/reporting-table/reporting-table.component.scss
@@ -21,7 +21,6 @@ th {
   width: 60px;
   margin-right: 30px;
   text-overflow: ellipsis;
-  white-space: nowrap;
 }
 
 .mat-column {
